--- a/package.json
+++ b/package.json
@@ -6,5 +6,15 @@
   "devDependencies": {
     "@playwright/test": "^1.30.0"
   },
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "@orbs-network/ton-access": "^2.3.0",
+    "dotenv": "^16.0.3",
+    "openai": "^3.1.0",
+    "ton": "^13.4.1",
+    "ton-core": "^0.48.0",
+    "ton-crypto": "^3.2.0",
+    "tonweb": "^0.0.60",
+    "ts-node": "^10.9.1"
+  }
 }
